ola-parser/src/testdata/syntaxTests/parsing/new_invalid_type_name.sol
contract C {
	fn f() {
		new var;
	}
}
// ----
// ParserError 3546: (35-38): Expected type name
